// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual case initial hearing should render the component 1`] = `
<manual-case-hearing-details
  _hearingDurationFocused="false"
  cdr={[Function ViewRef]}
  courtCentreSuggestions={[Function Array]}
  courtCentres={[Function Array]}
  courtRoomSugestions={[Function Array]}
  editManualCase={[Function Object]}
  form={[Function _NgForm]}
  hasCourtRoom={[Function Boolean]}
  hearingTypeSuggestions={[Function Array]}
  jurisdictionTypeCode={[Function Object]}
  location={[Function _Location]}
  manualCaseDetail={[Function Object]}
  submitFormData={[Function EventEmitter_]}
>
  <h1
    class="govuk-heading-xl"
    pdk-typography="heading-xlarge"
  >
    MANUAL_CASE_HEARING_DETAILS.TITLE
  </h1><pdk-grid
    class="govuk-grid-row"
    container=""
  >
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
      pdk-form=""
    >
      <pdk-grid
        class="govuk-grid-column-one-half"
        one-half=""
      >
        <pdk-grid
          data-role="create-new-hearing-form"
        >
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="courtHearingLocation"
              >
                 COMMON.COURT 
              </label>
              <pdk-hint
                class="govuk-hint"
              >
                <div>
                   MEDIA_REGISTER.COURT.HINT 
                </div>
              </pdk-hint>
              <pdk-autosuggest-lite
                class="ng-untouched ng-pristine ng-valid"
                data-role="hearing-court-centre-input"
                id="courtHearingLocation"
                name="courtCentre"
                required=""
              >
                <pdk-autosuggest
                  highlightcolor="blue"
                >
                  <pdk-interaction-container>
                    <div>
                      <div
                        class="pdk-autosuggest"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                          aria-describedby="pdk-autosuggest__instructions-GENERATED_ID aria-describedby-courtcentre-autosuggest"
                          aria-expanded="false"
                          autocomplete="off"
                          class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                          id="courtHearingLocation"
                          role="combobox"
                          type="text"
                        />
                        <span
                          class="govuk-visually-hidden"
                          id="pdk-autosuggest__instructions-GENERATED_ID"
                          pdk-visually-hidden=""
                        >
                           When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                        </span>
                        <span
                          aria-live="polite"
                          class="govuk-visually-hidden"
                          pdk-visually-hidden=""
                          role="status"
                        >
                        </span>
                        <div
                          class="pdk-autosuggest__suggestions-container"
                          id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                        >
                        </div>
                      </div>
                    </div>
                  </pdk-interaction-container>
                </pdk-autosuggest>
              </pdk-autosuggest-lite>
            </pdk-form-group>
          </pdk-form-field>
          <div>
            <pdk-form-field
              class="filterSelect"
              hint=""
              id="dateOfHearing"
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     COMMON.HEARING.DATE 
                  </legend>
                  <pdk-hint
                    class="govuk-hint"
                  >
                    <div>
                       For example, 23 10 2017 
                    </div>
                  </pdk-hint>
                  <pdk-date-input
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="hearing-date-filter-input"
                    name="dateOfHearing"
                    picker=""
                    required=""
                  >
                    <pdk-interaction-container>
                      <div>
                        <div
                          class="pdk-date-input"
                        >
                          <div
                            class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                          >
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-day"
                                pdk-label=""
                              >
                                 Day 
                              </label>
                              <input
                                aria-describedby="date"
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                formcontrolname="day"
                                id="dateOfHearing-day"
                                name="dateDay"
                                required=""
                                type="number"
                              />
                            </div>
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-month"
                                pdk-label=""
                              >
                                 Month 
                              </label>
                              <input
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                formcontrolname="month"
                                id="dateOfHearing-month"
                                name="dateMonth"
                                required=""
                                type="number"
                              />
                            </div>
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-year"
                                pdk-label=""
                              >
                                 Year 
                              </label>
                              <input
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                formcontrolname="year"
                                id="dateOfHearing-year"
                                name="dateYear"
                                required=""
                                type="number"
                              />
                            </div>
                          </div>
                          <div
                            class="pdk-!-negative-margin-left-2"
                            pdk-margin-left="-2"
                          >
                            <pdk-date-picker-toggle>
                              <pdk-interaction-container>
                                <div>
                                  <div
                                    aria-expanded="false"
                                    aria-label="Toggle date picker"
                                    class="pdk-date-picker__toggle"
                                    role="button"
                                    tabindex="0"
                                  >
                                    <pdk-date-picker-icon
                                      style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                    >
                                      <div
                                        style="display: flex; align-items: center; justify-content: center;"
                                      >
                                        <i
                                          style="height: 28px; width: 28px; fill: #333;"
                                        >
                                          <svg
                                            viewBox="0 0 448 512"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                            />
                                          </svg>
                                        </i>
                                      </div>
                                    </pdk-date-picker-icon>
                                  </div>
                                </div>
                              </pdk-interaction-container>
                            </pdk-date-picker-toggle>
                          </div>
                        </div>
                      </div>
                    </pdk-interaction-container>
                  </pdk-date-input>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
          </div>
          <pdk-form-field
            hint=""
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.START_TIME 
                </legend>
                <pdk-hint
                  class="govuk-hint"
                >
                  <div>
                     For example, 10 30 
                  </div>
                </pdk-hint>
                <pdk-time-input
                  class="ng-untouched ng-pristine ng-valid"
                  data-role="hearing-earliest-start-input"
                  name="timeOfHearing"
                  required=""
                >
                  <div
                    class="pdk-time-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="pdk-time-input__item pdk-time-input__item--hour"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-hours"
                        pdk-label=""
                      >
                         Hours 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="hours"
                        id="pdk-time-input-GENERATED_ID-hours"
                        maxlength="2"
                        name="timeHours"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="pdk-time-input__item"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-minutes"
                        pdk-label=""
                      >
                         Minutes 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="minutes"
                        id="pdk-time-input-GENERATED_ID-minutes"
                        maxlength="2"
                        minlength="2"
                        name="timeMinutes"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </pdk-time-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.DURATION 
                </legend>
                <pdk-time-input
                  class="ng-untouched ng-pristine ng-valid"
                  data-role="hearing-estimated-minutes-input"
                  name="hearingDuration"
                  required=""
                >
                  <div
                    class="pdk-time-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="pdk-time-input__item pdk-time-input__item--hour"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-hours"
                        pdk-label=""
                      >
                         Hours 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="hours"
                        id="pdk-time-input-GENERATED_ID-hours"
                        maxlength="2"
                        name="timeHours"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="pdk-time-input__item"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-minutes"
                        pdk-label=""
                      >
                         Minutes 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="minutes"
                        id="pdk-time-input-GENERATED_ID-minutes"
                        maxlength="2"
                        minlength="2"
                        name="timeMinutes"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </pdk-time-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.LANGUAGES 
                </legend>
                <pdk-radio-group
                  class="ng-untouched ng-pristine ng-valid"
                  name="hearingLanguage"
                  required=""
                >
                  <div
                    class="govuk-radios govuk-radios--inline"
                  >
                    <pdk-radio-button
                      value="ENGLISH"
                    >
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="ENGLISH"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                          COMMON.ENGLISH
                        </label>
                      </div>
                    </pdk-radio-button>
                    <pdk-radio-button
                      value="WELSH"
                    >
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="WELSH"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                          COMMON.WELSH
                        </label>
                      </div>
                    </pdk-radio-button>
                  </div>
                </pdk-radio-group>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
        </pdk-grid>
        <button
          class="govuk-button"
          data-role="send-for-listing"
          name="continue"
          pdk-button=""
          type="submit"
        >
           COMMON.CONTINUE 
        </button>
        <br />
        <p
          class="govuk-!-margin-top-3"
          pdk-margin-top="3"
        >
          <a
            class="govuk-link govuk-link--no-visited-state"
            href="javascript:void(0)"
            pdk-link=""
            unvisited=""
          >
             COMMON.BACK 
          </a>
        </p>
      </pdk-grid>
    </form>
  </pdk-grid>
</manual-case-hearing-details>
`;

exports[`Manual case initial hearing should render the component 2 1`] = `
<manual-case-hearing-details
  _hearingDurationFocused="false"
  cdr={[Function ViewRef]}
  courtCentreSuggestions={[Function Array]}
  courtCentres={[Function Array]}
  courtRoomSugestions={[Function Array]}
  editManualCase={[Function Object]}
  form={[Function _NgForm]}
  hasCourtRoom="false"
  hearingTypeSuggestions={[Function Array]}
  jurisdictionTypeCode={[Function Object]}
  location={[Function _Location]}
  manualCaseDetail={[Function Object]}
  submitFormData={[Function EventEmitter_]}
>
  <h1
    class="govuk-heading-xl"
    pdk-typography="heading-xlarge"
  >
    MANUAL_CASE_HEARING_DETAILS.TITLE
  </h1><pdk-grid
    class="govuk-grid-row"
    container=""
  >
    <form
      class="ng-untouched ng-pristine ng-valid"
      novalidate=""
      pdk-form=""
    >
      <pdk-grid
        class="govuk-grid-column-one-half"
        one-half=""
      >
        <pdk-grid
          data-role="create-new-hearing-form"
        >
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <label
                class="govuk-label govuk-label--s"
                for="courtHearingLocation"
              >
                 COMMON.COURT 
              </label>
              <pdk-hint
                class="govuk-hint"
              >
                <div>
                   MEDIA_REGISTER.COURT.HINT 
                </div>
              </pdk-hint>
              <pdk-autosuggest-lite
                class="ng-untouched ng-pristine ng-valid"
                data-role="hearing-court-centre-input"
                id="courtHearingLocation"
                name="courtCentre"
                required=""
              >
                <pdk-autosuggest
                  highlightcolor="blue"
                >
                  <pdk-interaction-container>
                    <div>
                      <div
                        class="pdk-autosuggest"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                          aria-describedby="pdk-autosuggest__instructions-GENERATED_ID aria-describedby-courtcentre-autosuggest"
                          aria-expanded="false"
                          autocomplete="off"
                          class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                          id="courtHearingLocation"
                          role="combobox"
                          type="text"
                        />
                        <span
                          class="govuk-visually-hidden"
                          id="pdk-autosuggest__instructions-GENERATED_ID"
                          pdk-visually-hidden=""
                        >
                           When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                        </span>
                        <span
                          aria-live="polite"
                          class="govuk-visually-hidden"
                          pdk-visually-hidden=""
                          role="status"
                        >
                        </span>
                        <div
                          class="pdk-autosuggest__suggestions-container"
                          id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                        >
                        </div>
                      </div>
                    </div>
                  </pdk-interaction-container>
                </pdk-autosuggest>
              </pdk-autosuggest-lite>
            </pdk-form-group>
          </pdk-form-field>
          <div>
            <pdk-form-field
              class="filterSelect"
              hint=""
              id="dateOfHearing"
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     COMMON.HEARING.DATE 
                  </legend>
                  <pdk-hint
                    class="govuk-hint"
                  >
                    <div>
                       For example, 23 10 2017 
                    </div>
                  </pdk-hint>
                  <pdk-date-input
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="hearing-date-filter-input"
                    name="dateOfHearing"
                    picker=""
                    required=""
                  >
                    <pdk-interaction-container>
                      <div>
                        <div
                          class="pdk-date-input"
                        >
                          <div
                            class="govuk-date-input ng-untouched ng-pristine ng-invalid"
                          >
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-day"
                                pdk-label=""
                              >
                                 Day 
                              </label>
                              <input
                                aria-describedby="date"
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                formcontrolname="day"
                                id="dateOfHearing-day"
                                name="dateDay"
                                required=""
                                type="number"
                              />
                            </div>
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-month"
                                pdk-label=""
                              >
                                 Month 
                              </label>
                              <input
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                                formcontrolname="month"
                                id="dateOfHearing-month"
                                name="dateMonth"
                                required=""
                                type="number"
                              />
                            </div>
                            <div
                              class="govuk-date-input__item"
                            >
                              <label
                                class="govuk-date-input__label govuk-label"
                                for="dateOfHearing-year"
                                pdk-label=""
                              >
                                 Year 
                              </label>
                              <input
                                autocomplete="off"
                                class="govuk-date-input__input ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-4"
                                formcontrolname="year"
                                id="dateOfHearing-year"
                                name="dateYear"
                                required=""
                                type="number"
                              />
                            </div>
                          </div>
                          <div
                            class="pdk-!-negative-margin-left-2"
                            pdk-margin-left="-2"
                          >
                            <pdk-date-picker-toggle>
                              <pdk-interaction-container>
                                <div>
                                  <div
                                    aria-expanded="false"
                                    aria-label="Toggle date picker"
                                    class="pdk-date-picker__toggle"
                                    role="button"
                                    tabindex="0"
                                  >
                                    <pdk-date-picker-icon
                                      style="margin-top: -4px; display: inline-block; vertical-align: middle;"
                                    >
                                      <div
                                        style="display: flex; align-items: center; justify-content: center;"
                                      >
                                        <i
                                          style="height: 28px; width: 28px; fill: #333;"
                                        >
                                          <svg
                                            viewBox="0 0 448 512"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M148 288h-40c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12zm108-12v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 96v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm-96 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm192 0v-40c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12zm96-260v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V112c0-26.5 21.5-48 48-48h48V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h128V12c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v52h48c26.5 0 48 21.5 48 48zm-48 346V160H48v298c0 3.3 2.7 6 6 6h340c3.3 0 6-2.7 6-6z"
                                            />
                                          </svg>
                                        </i>
                                      </div>
                                    </pdk-date-picker-icon>
                                  </div>
                                </div>
                              </pdk-interaction-container>
                            </pdk-date-picker-toggle>
                          </div>
                        </div>
                      </div>
                    </pdk-interaction-container>
                  </pdk-date-input>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
          </div>
          <pdk-form-field
            hint=""
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.START_TIME 
                </legend>
                <pdk-hint
                  class="govuk-hint"
                >
                  <div>
                     For example, 10 30 
                  </div>
                </pdk-hint>
                <pdk-time-input
                  class="ng-untouched ng-pristine ng-valid"
                  data-role="hearing-earliest-start-input"
                  name="timeOfHearing"
                  required=""
                >
                  <div
                    class="pdk-time-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="pdk-time-input__item pdk-time-input__item--hour"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-hours"
                        pdk-label=""
                      >
                         Hours 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="hours"
                        id="pdk-time-input-GENERATED_ID-hours"
                        maxlength="2"
                        name="timeHours"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="pdk-time-input__item"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-minutes"
                        pdk-label=""
                      >
                         Minutes 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="minutes"
                        id="pdk-time-input-GENERATED_ID-minutes"
                        maxlength="2"
                        minlength="2"
                        name="timeMinutes"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </pdk-time-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.DURATION 
                </legend>
                <pdk-time-input
                  class="ng-untouched ng-pristine ng-valid"
                  data-role="hearing-estimated-minutes-input"
                  name="hearingDuration"
                  required=""
                >
                  <div
                    class="pdk-time-input ng-untouched ng-pristine ng-invalid"
                  >
                    <div
                      class="pdk-time-input__item pdk-time-input__item--hour"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-hours"
                        pdk-label=""
                      >
                         Hours 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="hours"
                        id="pdk-time-input-GENERATED_ID-hours"
                        maxlength="2"
                        name="timeHours"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                    <div
                      class="pdk-time-input__item"
                    >
                      <label
                        class="govuk-label"
                        for="pdk-time-input-GENERATED_ID-minutes"
                        pdk-label=""
                      >
                         Minutes 
                      </label>
                      <input
                        autocomplete="off"
                        class="ng-untouched ng-pristine ng-invalid govuk-input govuk-input--width-2"
                        formcontrolname="minutes"
                        id="pdk-time-input-GENERATED_ID-minutes"
                        maxlength="2"
                        minlength="2"
                        name="timeMinutes"
                        pattern="[0-9]*"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </pdk-time-input>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
          <pdk-form-field
            labeltype="small"
          >
            <pdk-form-group
              class="pdk-form-group"
            >
              <fieldset
                class="govuk-fieldset"
                pdk-fieldset=""
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--s"
                >
                   COMMON.HEARING.LANGUAGES 
                </legend>
                <pdk-radio-group
                  class="ng-untouched ng-pristine ng-valid"
                  name="hearingLanguage"
                  required=""
                >
                  <div
                    class="govuk-radios govuk-radios--inline"
                  >
                    <pdk-radio-button
                      value="ENGLISH"
                    >
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="ENGLISH"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                          COMMON.ENGLISH
                        </label>
                      </div>
                    </pdk-radio-button>
                    <pdk-radio-button
                      value="WELSH"
                    >
                      <div
                        class="govuk-radios__item"
                      >
                        <input
                          class="govuk-radios__input"
                          id="pdk-radio-GENERATED_ID"
                          name="pdk-radio-group-GENERATED_ID"
                          type="radio"
                          value="WELSH"
                        />
                        <label
                          class="govuk-radios__label govuk-label"
                          for="pdk-radio-GENERATED_ID"
                          pdk-label=""
                        >
                          COMMON.WELSH
                        </label>
                      </div>
                    </pdk-radio-button>
                  </div>
                </pdk-radio-group>
              </fieldset>
            </pdk-form-group>
          </pdk-form-field>
        </pdk-grid>
        <button
          class="govuk-button"
          data-role="send-for-listing"
          name="continue"
          pdk-button=""
          type="submit"
        >
           COMMON.CONTINUE 
        </button>
        <br />
        <p
          class="govuk-!-margin-top-3"
          pdk-margin-top="3"
        >
          <a
            class="govuk-link govuk-link--no-visited-state"
            href="javascript:void(0)"
            pdk-link=""
            unvisited=""
          >
             COMMON.BACK 
          </a>
        </p>
      </pdk-grid>
    </form>
  </pdk-grid>
</manual-case-hearing-details>
`;
